# newsletter

./: Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
